--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -51,9 +51,9 @@ export const metaSettings = createStoryMetaSettings({
 export const dropdownTemplate = props => {
   const options = useMemo(
     () => [
-      { value: 1, label: "Option 1" },
-      { value: 2, label: "Option 2" },
-      { value: 3, label: "Option 3" }
+      { value: "1", label: "Option 1" },
+      { value: "2", label: "Option 2" },
+      { value: "3", label: "Option 3" }
     ],
     []
   );
@@ -423,9 +423,9 @@ The Dropdown component supports multiple options selection in two different stat
           <Dropdown
             placeholder="Placeholder text here"
             options={[
-              { value: 1, label: "Option 1" },
-              { value: 2, label: "Option 2" },
-              { value: 3, label: "Option 3" }
+              { value: "1", label: "Option 1" },
+              { value: "2", label: "Option 2" },
+              { value: "3", label: "Option 3" }
             ]}
             className="dropdown-stories-styles_rules-spacing"
           />
@@ -439,9 +439,9 @@ The Dropdown component supports multiple options selection in two different stat
             menuIsOpen
             placeholder="Placeholder text here"
             options={[
-              { value: 1, label: "Option 1" },
-              { value: 2, label: "Option 2" },
-              { value: 3, label: "Option 3" }
+              { value: "1", label: "Option 1" },
+              { value: "2", label: "Option 2" },
+              { value: "3", label: "Option 3" }
             ]}
             className="dropdown-stories-styles_rules-spacing"
           />
