--- a/src/components/Clickable/__stories__/Clickable.stories.mdx
+++ b/src/components/Clickable/__stories__/Clickable.stories.mdx
@@ -1,5 +1,5 @@
 import Clickable from "../Clickable";
-import Flex from "../../Flex/Flex";
+import { Flex } from "../..";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import {
   BUTTON,
