--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -9,6 +9,9 @@ import Avatar from "../../Avatar/Avatar";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import { Email } from "../../Icon/Icons";
 import person1 from "./assets/person1.png";
+import { useCallback, useState } from "react";
+import Counter from "../../Counter/Counter";
+import StoryDescription from "../../../storybook/components/story-description/story-description";
 import "./chips.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
@@ -221,6 +224,36 @@ Chips can be removable.
         </div>
       </div>
     </DialogContentContainer>
+  </Story>
+</Canvas>
+
+### Clickable Chip
+
+Chips can be clickable.
+
+<Canvas>
+  <Story name="Clickable Chip">
+    {() => {
+      const [onClickCount, setOnClickCount] = useState(0);
+      const [onDeleteCount, setOnDeleteCount] = useState(0);
+      const onClick = useCallback(e => {
+        setOnClickCount(prevState => prevState + 1);
+      }, []);
+      const onDelete = useCallback(e => {
+        setOnDeleteCount(prevState => prevState + 1);
+      }, []);
+      return (
+        <Flex direction={Flex.directions.ROW} gap={Flex.gaps.MEDIUM} align={Flex.align.START}>
+          <Chips label="Click me!" onClick={onClick} onDelete={onDelete} />
+          <StoryDescription description="Click count" vertical align={Flex.align.START}>
+            <Counter count={onClickCount} />
+          </StoryDescription>
+          <StoryDescription description="Delete count" vertical align={Flex.align.START}>
+            <Counter count={onDeleteCount} />
+          </StoryDescription>
+        </Flex>
+      );
+    }}
   </Story>
 </Canvas>
 
