--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -236,20 +236,32 @@ Chips can be clickable.
     {() => {
       const [onClickCount, setOnClickCount] = useState(0);
       const [onDeleteCount, setOnDeleteCount] = useState(0);
+      const [onMouseDownCount, setOnMouseDownCount] = useState(0);
       const onClick = useCallback(e => {
         setOnClickCount(prevState => prevState + 1);
       }, []);
       const onDelete = useCallback(e => {
         setOnDeleteCount(prevState => prevState + 1);
       }, []);
+      const onMouseDown = useCallback(e => {
+        setOnMouseDownCount(prevState => prevState + 1);
+      }, []);
       return (
         <Flex direction={Flex.directions.ROW} gap={Flex.gaps.MEDIUM} align={Flex.align.START}>
-          <Chips label="Click me!" onClick={onClick} onDelete={onDelete} isClickable />
+          <Chips label="Click me!" onClick={onClick} onDelete={onDelete} onMouseDown={onMouseDown} isClickable />
           <StoryDescription description="Click count" vertical align={Flex.align.START}>
             <Counter count={onClickCount} />
           </StoryDescription>
           <StoryDescription description="Delete count" vertical align={Flex.align.START}>
             <Counter count={onDeleteCount} />
+          </StoryDescription>
+          <StoryDescription
+            description="Mouse down count"
+            vertical
+            align={Flex.align.START}
+            headerStyle={{ width: 150 }}
+          >
+            <Counter count={onMouseDownCount} />
           </StoryDescription>
         </Flex>
       );
