Accessability story navigation fix

--- a/src/storybook/stand-alone-documentaion/accessibility/accessibility.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/accessibility/accessibility.stories.mdx
@@ -1,17 +1,17 @@
-import {Meta} from "@storybook/addon-docs";
-import {ComponentName, Frame, UnstyledList, UnstyledListItem, Link} from "../../components";
-import {PrinciplesAccesability} from "./principles/principlesAccesability";
-import {COLORS, TYPOGRAPHY, HIDDEN_TEXT} from "../../components/related-components/component-description-map";
+import { Meta } from "@storybook/addon-docs";
+import { ComponentName, Frame, Link, UnstyledList, UnstyledListItem } from "../../components";
+import { PrinciplesAccesability } from "./principles/principlesAccesability";
+import { COLORS, HIDDEN_TEXT, TYPOGRAPHY } from "../../components/related-components/component-description-map";
 import {
-    accessibilityCheckList,
-    colorContrastImage,
-    colorContrastText,
-    hierarchyOrder,
-    imageryDecorative,
-    imageryDescriptive,
-    imageryAlt,
-    navigationFocus,
-    navigationTabs
+  accessibilityCheckList,
+  colorContrastImage,
+  colorContrastText,
+  hierarchyOrder,
+  imageryAlt,
+  imageryDecorative,
+  imageryDescriptive,
+  navigationFocus,
+  navigationTabs
 } from "./assets";
 
 <Meta
@@ -24,8 +24,8 @@ import {
 
 - [Intro](#intro)
 - [Accessibility principles](#accessibility-principles)
-- [Color contrast](color-contrast)
-- [Imagery](#Imagery)
+- [Color contrast](#color-contrast)
+- [Imagery](#imagery)
 - [Hierarchy and focus](#hierarchy-and-focus)
 - [Navigation](#navigation)
 - [Assistive Technology](#assistive-technology)
