--- a/src/components/TextWithHighlight/__stories__/TextWithHighlight.stories.mdx
+++ b/src/components/TextWithHighlight/__stories__/TextWithHighlight.stories.mdx
@@ -28,7 +28,9 @@ export const textWithHighlightTemplate = createComponentTemplate(TextWithHighlig
 Component for displaying highlighted text
 
 <Canvas>
-  <Story name="Overview" args={{ text: "Hello world, hello world again", highlightTerm: "Hello again" }}>
+  <Story name="Overview" args={{
+      text: "Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again Hello world, hello world again", highlightTerm: "Hello again" }}
+  >
     {textWithHighlightTemplate.bind({})}
   </Story>
 </Canvas>
