Revert "TS-migration: Tipseen + some constants usage refactoring (#998)"
This reverts commit c0b058a408c93247bb0e738653b06c5916dda78f.

# Conflicts:
#	src/components/Tooltip/Tooltip.tsx

--- a/src/components/Tipseen/__stories__/tipseen.stories.mdx
+++ b/src/components/Tipseen/__stories__/tipseen.stories.mdx
@@ -58,7 +58,7 @@ Tipseen is an virtual unboxing experience that helps users get started with the 
 </Canvas>
 
 ## Props
-<ArgsTable story="Overview" />
+<ArgsTable of={ Tipseen } />
 
 ## Usage
 <UsageGuidelines guidelines={[
