Dropdown stories: small visual fix

--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -217,7 +217,7 @@ The Dropdown component supports multiple options selection in two different stat
               />
             </div>
           </StoryDescription>
-          <StoryDescription description="Mandatory default values" vertical>
+          <StoryDescription description="Mandatory default values" vertical headerStyle={{ width: 190 }}>
             <div style={{ width: "400px" }}>
               <Dropdown
                 defaultValue={[options[0]]}
