change welcome page to show current team

--- a/src/storybook/stand-alone-documentaion/welcome/welcome.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/welcome/welcome.stories.mdx
@@ -31,6 +31,6 @@ We welcome contributions to monday.com design system!
 
 Read our contributing guide and help us build and improve our components.
 
-### Meet the client foundations team
+### Meet Vibe team
 <Contributors />
 <OtherContributorsList/>
