--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -1,4 +1,4 @@
-import _chunk from "lodash/chunk";
+import { chunk as _chunk } from "lodash-es";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Flex from "../../Flex/Flex";
 import Chips from "../Chips";
@@ -127,7 +127,6 @@ Chips are compact elements that represent an input, attribute, or action. They m
     }}
   </Story>
 </Canvas>
-
 
 ### Color coded chips
 
