--- a/src/components/Tooltip/__stories__/tooltip.stories.mdx
+++ b/src/components/Tooltip/__stories__/tooltip.stories.mdx
@@ -1,5 +1,5 @@
 import Tooltip from "../Tooltip";
-import { capitalize } from "lodash";
+import { capitalize } from "lodash-es";
 import TooltipReference from "./TooltipReference";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { Hide, Subitems, Bolt } from "../../Icon/Icons";
