--- a/src/hooks/useGridKeyboardNavigation/__stories__/useGridKeyboardNavigation.stories.mdx
+++ b/src/hooks/useGridKeyboardNavigation/__stories__/useGridKeyboardNavigation.stories.mdx
@@ -3,7 +3,7 @@ import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import useGridKeyboardNavigation from "../useGridKeyboardNavigation";
 import { action } from "@storybook/addon-actions";
 import cx from "classnames";
-import range from "lodash/range";
+import { range } from "lodash-es";
 import "./useGridKeyboardNavigation.stories.scss";
 import Button from "../../../../src/components/Button/Button";
 
