--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -681,6 +681,7 @@ with overflow hidden content which use CSS transform function.
           <Dropdown
             placeholder="Dropdown inside a scrollable dialog"
             options={options}
+            maxMenuHeight={60}
             insideOverflowWithTransformContainer
           />
         </DialogContentContainer>
