Feature/sergeyro/fix clickable chips breaking changes (#1055)
* Chips fix breaking change, which occured when clickable chip was implemented

* Update snapshots

* Rename hook

* Fix PR notes - useClickable without stylesheets

* Rename useClickable back to useClickableProps

* TODO note added

* ariaHasPopup convert to boolean

* Fix ariaHasPopup = undefined case

* Fix merge conflict

* Add hover effect on keyboard focus

* isClickable prop deprecated

* Remove useFocus

--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -113,7 +113,7 @@ Chips are compact elements that represent an input, attribute, or action. They m
   </Story>
 </Canvas>
 
-### Clickable
+### Clickable chips
 
 <Canvas>
   <Story name="Clickable">
