--- a/src/components/ResponsiveList/__stories__/ResponsiveList.stories.mdx
+++ b/src/components/ResponsiveList/__stories__/ResponsiveList.stories.mdx
@@ -1,9 +1,104 @@
-import ResponsiveList from "../ResponsiveList";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { Sandbox } from "./responsiveListStoriesComponents";
+import {
+  Activity,
+  Alert,
+  API,
+  Bolt,
+  Broom,
+  CloseSmall,
+  Group,
+  Moon,
+  Search as SearchIcon,
+  Sun,
+  Open
+} from "../../Icon/Icons";
+import ResponsiveList from "../ResponsiveList";
+import Menu from "../../Menu/Menu/Menu";
+import MenuItem from "../../Menu/MenuItem/MenuItem";
+import SplitButton from "../../SplitButton/SplitButton";
+import Search from "../../Search/Search";
+import Button from "../../Button/Button";
+import Icon from "../../Icon/Icon";
 import "./ResponsiveList.stories.scss";
 
 <Meta title="Layout/ResponsiveList" component={ResponsiveList} />
+
+export const componentTemplate = responseListProps => {
+  const secondaryContent = (
+    <Menu>
+      <MenuItem icon={Alert} title="Watch out" />
+      <MenuItem icon={Activity} title="History" />
+    </Menu>
+  );
+  return (
+    <div style={{ width: "100%" }}>
+      <div style={{ width: "80%" }}>
+        <ResizableBox
+          height={48}
+          width={700}
+          handle={
+            <span className="custom-handle custom-handle-se">
+              <Icon icon={Open} iconSize={20} clickable={false} className="icon-resizer" />
+            </span>
+          }
+          handleSize={[12, 12]}
+          className="resizable-container"
+          minConstraints={[200, 48]}
+          maxConstraints={[850, 48]}
+        >
+          <ResponsiveList
+            id="Knobs"
+            className="responsive-story"
+            menuButtonSize={ResponsiveList.menuButtonSizes.MEDIUM}
+            {...responseListProps}
+          >
+            <SplitButton size={SplitButton.sizes.MAIN} marginRight secondaryDialogContent={secondaryContent}>
+              Add Item
+            </SplitButton>
+            <div
+              className="responsive-lst-search"
+              responsiveListPlaceholder={
+                <Search
+                  id="search-icon-inside"
+                  size={Search.sizes.MEDIUM}
+                  placeholder="search for content"
+                  iconName={SearchIcon}
+                  secondaryIconName={CloseSmall}
+                />
+              }
+            >
+              <Search
+                size={Search.sizes.MEDIUM}
+                placeholder="search for content"
+                iconName={SearchIcon}
+                secondaryIconName={CloseSmall}
+              />
+            </div>
+            <Button kind={Button.kinds.TERTIARY} marginLeft>
+              <Icon icon={Broom} ignoreFocusStyle className="responsive-icon-margin" />
+              Clean
+            </Button>
+            <Button kind={Button.kinds.TERTIARY} marginLeft>
+              <Icon icon={Group} ignoreFocusStyle />
+            </Button>
+            <Button kind={Button.kinds.TERTIARY} marginLeft>
+              <Icon icon={Moon} ignoreFocusStyle />
+            </Button>
+            <Button kind={Button.kinds.TERTIARY} marginLeft>
+              <Icon icon={API} ignoreFocusStyle />
+            </Button>
+            <Button kind={Button.kinds.TERTIARY} marginLeft>
+              <Icon icon={Sun} ignoreFocusStyle />
+            </Button>
+            <Button kind={Button.kinds.TERTIARY} marginLeft>
+              <Icon icon={Bolt} ignoreFocusStyle />
+            </Button>
+          </ResponsiveList>
+        </ResizableBox>
+      </div>
+    </div>
+  );
+};
 
 # ResponsiveList
 
@@ -29,7 +124,9 @@ ResponsiveList is a helper component, it is in charge of "moving" elements when 
 
 ## Usage
 
-<UsageGuidelines guidelines={[
-  "Use this component when you want to handle different screen sizes",
-  "Make sure to limit the parent size so the list can 'decide' when to collapse"
-]}/>
+<UsageGuidelines
+  guidelines={[
+    "Use this component when you want to handle different screen sizes",
+    "Make sure to limit the parent size so the list can 'decide' when to collapse"
+  ]}
+/>
