--- a/src/components/ResponsiveList/__stories__/ResponsiveList.stories.mdx
+++ b/src/components/ResponsiveList/__stories__/ResponsiveList.stories.mdx
@@ -114,7 +114,7 @@ ResponsiveList is a helper component, it is in charge of "moving" elements when 
 
 <Canvas>
   <Story name="Overview" args={{}}>
-    {Sandbox.bind({})}
+    {componentTemplate.bind({})}
   </Story>
 </Canvas>
 
